--- a/Content/Labs/Warmtecapaciteit.ipynb
+++ b/Content/Labs/Warmtecapaciteit.ipynb
@@ -41,7 +41,7 @@
     "\n",
     "$$\n",
     "    T_e = \\frac{c_w m_w T_{w,b}+c_m m_m T_{m,b}}{c_w m_w + c_m m_m}\n",
-    "$$ \\label{eq:combined}\n",
+    "$$ (eq:combined)\n",
     "\n",
     "Waarbij de subscripts $b$ en $e$ respectievelijk staan voor begintoestand en eindtoestand, $w$ voor water en $m$ voor het onbekende materiaal.\n",
     "\n",
@@ -77,12 +77,13 @@
     "\n",
     "\n",
     "## Procedure\n",
-    "```{exercise}\n",
-    "1. Beschrijf de procedure die nodig is om de soortelijke warmte van water te bepalen.\n",
-    "2. Geef jouw beschrijving van de procedure aan een ander team, zij verzamelen voor jou de data op basis van de gegevens.\n",
-    "3. Voer het experiment van een ander team uit op basis van hun beschrijving.\n",
-    "4. Analyseer de data die het andere groepje voor jou heeft verzameld.\n",
-    "```\n"
+    "Bespreek wie welke massa's van het onbekende materiaal gaat meten.\n",
+    "Bespreek ook hoeveel water er gebruikt gaat worden.\n",
+    "Bepaal de begintemperaturen.\n",
+    "Hevel het aantal afgesproken massa's in de maatbeker. \n",
+    "Roer voorzicht zodat de temperatuur homogeen is.\n",
+    "Noteer de hoogste gemeten temperatuur, dit is $T_e$.\n",
+    "Wissel de metingen uit met de andere groepen en voer de data-analyse uit.\n"
    ]
   },
   {
