--- a/Content/Labs/cwater.ipynb
+++ b/Content/Labs/cwater.ipynb
@@ -58,7 +58,13 @@
     "```\n",
     "\n",
     "## Procedure\n",
-    "Vul hier je procedure in.\n",
+    "```{exercise}\n",
+    "1. Beschrijf de procedure die nodig is om de soortelijke warmte van water te bepalen.\n",
+    "2. Geef jouw beschrijving van de procedure aan een ander team, zij verzamelen voor jou de data op basis van de gegevens.\n",
+    "3. Voer het experiment van een ander team uit op basis van hun beschrijving.\n",
+    "4. Analyseer de data die het andere groepje voor jou heeft verzameld.\n",
+    "```\n",
+    "\n",
     "\n",
     "## Veiligheid\n",
     "We maken gebruik van een $10 \\mathrm{\\Omega}$, $10 \\mathrm{W}$ weerstand.\n",
