--- a/Content/PySim/5_druktemp.ipynb
+++ b/Content/PySim/5_druktemp.ipynb
@@ -530,7 +530,7 @@
    "id": "fb8f785a",
    "metadata": {},
    "source": [
-    "Met de middeling kan je beter zien wat de gemiddelde waarde voor de druk in dit systeem is. Als dit voor jouw simulatie lastig is kan je de factor `alpha` aanpassen in de functie 'handle_walls`, zodat je over een langere periode het gemiddelde neemt. Hou daarbij wel rekening met de eis in [bovenstaande formule](int_norm)\n",
+    "Met de middeling kan je beter zien wat de gemiddelde waarde voor de druk in dit systeem is. Als dit voor jouw simulatie lastig is kan je de factor `alpha` aanpassen in de functie 'handle_walls`, zodat je over een langere periode het gemiddelde neemt. Hou daarbij wel rekening met de eis in [bovenstaande formule](#int_norm)\n",
     "\n",
     "```{exercise}\n",
     ":label: ex-druktemp-7\n",
@@ -582,7 +582,7 @@
    "id": "5916caed",
    "metadata": {},
    "source": [
-    "In [de formule voor de tweedimensionale druk](2d_pressure) kan je de structuur van de ideale gaswet herkennen. \n",
+    "In [de formule voor de tweedimensionale druk](#2d_pressure) kan je de structuur van de ideale gaswet herkennen. \n",
     "\n",
     "```{exercise}\n",
     ":label: ex-druktemp9b\n",
